--- a/spots/spots.html
+++ b/spots/spots.html
@@ -269,7 +269,7 @@
             <!-- Original spots -->
             <div class="spot-card" data-type="outdoor" data-price="0">
                 <span class="category-tag">Outdoor</span>
-                <img src="https://images.unsplash.com/photo-1516426122078-c23e76319801" alt="Diani Beach" class="spot-image">
+                <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945" alt="Diani Beach" class="spot-image">
                 <div class="spot-info">
                     <h3 class="spot-name">Diani Beach</h3>
                     <p class="spot-description">Beautiful white sandy beach perfect for romantic walks and sunset views.</p>
@@ -288,7 +288,7 @@
 
             <div class="spot-card" data-type="luxury" data-price="25000">
                 <span class="category-tag">Luxury</span>
-                <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb" alt="Giraffe Manor" class="spot-image">
+                <img src="./assets/Screenshot 2025-02-08 at 04.24.46.png" alt="Giraffe Manor" class="spot-image">
                 <div class="spot-info">
                     <h3 class="spot-name">Giraffe Manor</h3>
                     <p class="spot-description">Iconic boutique hotel where you can dine with giraffes. Ultimate luxury romantic experience.</p>
@@ -326,7 +326,7 @@
 
             <div class="spot-card" data-type="hotel" data-price="15000">
                 <span class="category-tag">Hotel</span>
-                <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945" alt="Hemingways Nairobi" class="spot-image">
+                <img src="./assets/Screenshot 2025-02-08 at 04.30.10.png" alt="Hemingways Nairobi" class="spot-image">
                 <div class="spot-info">
                     <h3 class="spot-name">Hemingways Nairobi</h3>
                     <p class="spot-description">Luxury boutique hotel with elegant rooms and fine dining restaurant.</p>
@@ -345,7 +345,7 @@
 
             <div class="spot-card" data-type="adventure" data-price="8000">
                 <span class="category-tag">Adventure</span>
-                <img src="https://images.unsplash.com/photo-1533692328991-08159ff19fca" alt="Lake Naivasha Resort" class="spot-image">
+                <img src="https://images.unsplash.com/photo-1533692328991-08159ff19fca" alt="Uhuru Park" class="spot-image">
                 <div class="spot-info">
                     <h3 class="spot-name">Uhuru Park</h3>
                     <p class="spot-description">Uhuru Park with boat rides and romantic sunset views.</p>
@@ -364,7 +364,7 @@
 
             <div class="spot-card" data-type="cultural" data-price="3000">
                 <span class="category-tag">Cultural</span>
-                <img src="https://images.unsplash.com/photo-1544161515-4ab6ce6db874" alt="Bomas of Kenya" class="spot-image">
+                <img src="./assets/Screenshot 2025-02-08 at 04.26.51.png" alt="Bomas of Kenya" class="spot-image">
                 <div class="spot-info">
                     <h3 class="spot-name">Bomas of Kenya</h3>
                     <p class="spot-description">Experience traditional Kenyan culture and performances.</p>
