--- a/music/music.html
+++ b/music/music.html
@@ -1,39 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <title>Day #75 - Mini Music Player | AsmrProg</title>
-</head>
+    <title>Music Player</title>
+    <script defer src="script.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #111;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
 
+        .music-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
+
+        /* Music Tiles Grid */
+        .music-tiles {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 15px;
+            width: 90%;
+            max-width: 800px;
+            margin: 20px 0;
+        }
+
+        .music-tile {
+            background: #222;
+            padding: 10px;
+            border-radius: 10px;
+            text-align: center;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .music-tile:hover {
+            transform: scale(1.05);
+        }
+
+        .music-tile img {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        .player {
+            margin-top: 20px;
+        }
+
+        .cover {
+            width: 150px;
+            height: 150px;
+            background-size: cover;
+            border-radius: 10px;
+            margin: 0 auto;
+        }
+
+        .controls {
+            margin-top: 10px;
+        }
+
+        button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 20px;
+            margin: 10px;
+            cursor: pointer;
+        }
+
+        .progress-container {
+            width: 80%;
+            margin: auto;
+            background: #444;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        .progress-bar {
+            width: 100%;
+            height: 5px;
+        }
+
+        .fill-bar {
+            width: 0%;
+            height: 100%;
+            background: #ff5733;
+        }
+
+        .time {
+            margin-top: 5px;
+            font-size: 14px;
+        }
+    </style>
+</head>
 <body>
 
-    <div class="container">
-        <div class="song-info">
-            <div class="artist-name"></div>
-            <div class="song-name"></div>
+    <div class="music-container">
+        <h1>🎵 My Music Player 🎵</h1>
+        <div class="music-tiles"></div>
+    </div>
+
+    <div class="player">
+        <div id="cover" class="cover"></div>
+        <div class="info">
+            <h2 class="song-name"></h2>
+            <p class="artist-name"></p>
+        </div>
+        <div class="controls">
+            <button id="prev"><i class="fa fa-backward"></i></button>
+            <button id="play" class="fa fa-play"></button>
+            <button id="next"><i class="fa fa-forward"></i></button>
+        </div>
+        <div class="progress-container">
             <div class="progress-bar">
                 <div class="fill-bar"></div>
             </div>
-            <div class="time">0:00 - 0:00</div>
-        </div>
-        <div class="disk">
-            <div class="circle"></div>
-            <div id="cover" class="cover"></div>
-        </div>
-        <div class="controls">
-            <i id="prev" class="prev-btn fa-solid fa-backward"></i>
-            <i id="play" class="play-btn fa-solid fa-play"></i>
-            <i id="next" class="next-btn fa-solid fa-forward"></i>
+            <p class="time">0:00 - 0:00</p>
         </div>
     </div>
 
-
-    <script src="script.js"></script>
-
 </body>
-
 </html>
