--- a/index.html
+++ b/index.html
@@ -4,17 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>HeartLogic</title>
 </head>
 <body>
-    <header> 
-        <ul class="navbar">
-            <li><a href="index.html" class="home-active active">Home</a></li>
-            <li><a href="chatbot.html">Chatbot</a></li>
-            <li><a href="music.html">Music</a></li>
-            <li><a href="movies.html">Movies</a></li>     
-            <li><a href="dating-spots.html">Dating Spots</a></li>
-        </ul>
-    </header>
+    <div class="container">
+        <header> 
+            <ul class="navbar">
+                <li><a href="index.html" class="home-active active">Home</a></li>
+                <li><a href="chatbot.html">Chatbot</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="movies.html">Movies</a></li>     
+                <li><a href="dating-spots.html">Dating Spots</a></li>
+                <li><a href="dating-spots.html">About & Contact</a></li>
+            </ul>
+        </header>
+
+        <main class="content">
+            <section class="hero">
+                <h1>Welcome to HeartLogic</h1>
+                <p class="tagline">Your Guide to Meaningful Relationships</p>
+            </section>
+
+            <section class="features">
+                <div class="feature-card">
+                    <i class="fas fa-robot"></i>
+                    <h2>AI Relationship Advisor</h2>
+                    <p>Get personalized relationship advice from our advanced AI chatbot, available 24/7 to help you navigate your relationship journey.</p>
+                </div>
+
+                <div class="feature-card">
+                    <i class="fas fa-music"></i>
+                    <h2>Perfect Playlist</h2>
+                    <p>Discover curated romantic playlists for every moment, from first dates to anniversary celebrations.</p>
+                </div>
+
+                <div class="feature-card">
+                    <i class="fas fa-film"></i>
+                    <h2>Movie Magic</h2>
+                    <p>Find the ideal movie for your next date night with our personalized recommendations based on your preferences.</p>
+                </div>
+            </section>
+
+            <section class="cta">
+                <h2>Ready to Transform Your Love Life?</h2>
+                <button class="start-button">Get Started</button>
+            </section>
+        </main>
+    </div>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 HeartLogic. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
