--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <li><a href="index.html" class="home-active active">Home</a></li>
             <li><a href="chatbot/chatbot.html">Chatbot</a></li>
             <li><a href="music/music.html">Music</a></li>
-            <li><a href="movies/movies.html">Movies</a></li>     
-            <li><a href="dating-spots/dating-spots.html">Dating Spots</a></li>
+            <li><a href="movies/movie.html">Movies</a></li>     
+            <li><a href="spots/spots.html">Dating Spots</a></li>
         </ul>
     </header>
     
