--- a/movies/movie.html
+++ b/movies/movie.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            background-color: var(--light-pink);
+            background: linear-gradient(135deg, #8F788D, #D180AC);
             padding: 20px;
         }
 
