--- a/spots/spots.html
+++ b/spots/spots.html
@@ -5,16 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenya Dating Spots & Events</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        :root {
+            --primary-bg: #f8e1e8;
+            --secondary-bg: #e6d5e8;
+            --accent-color: #b784c1;
+            --text-primary: #4a2b50;
+            --text-secondary: #7d5986;
+            --hover-color: #d4a5dd;
+            --card-bg: #fff1f5;
+            --shadow-color: rgba(183, 132, 193, 0.2);
         }
 
         body {
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, var(--primary-bg), var(--secondary-bg));
             padding: 20px;
+            padding-top: 100px;
+        }
+
+        /* Navbar Styling */
+        .navbar {
+            background: rgba(183, 132, 193, 0.2);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 25px;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px var(--shadow-color);
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 95%;
+            max-width: 1400px;
+            z-index: 1000;
+            margin-bottom: 40px;
+        }
+
+        .navbar ul {
+            display: flex;
+            list-style: none;
+            gap: 10px;
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        .navbar li {
+            margin: 0;
+            flex: 1;
+            text-align: center;
+        }
+
+        .navbar a {
+            text-decoration: none;
+            color: var(--text-primary);
+            padding: 12px 15px;
+            font-size: 0.9em;
+            font-weight: 500;
+            transition: all 0.3s ease-in-out;
+            display: block;
+            white-space: nowrap;
+        }
+
+        .navbar a:hover {
+            background: var(--hover-color);
+            border-radius: 10px;
+            transform: translateY(-2px);
+            color: white;
+        }
+
+        .navbar .active {
+            background: var(--accent-color);
+            color: white;
+            border-radius: 10px;
         }
 
         .container {
@@ -23,27 +98,27 @@
         }
 
         h1 {
-            color: #333;
+            color: var(--text-primary);
             text-align: center;
             margin-bottom: 30px;
             font-size: 2.5em;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            text-shadow: 1px 1px 2px var(--shadow-color);
         }
 
         .section-title {
-            color: #ff4b6e;
+            color: var(--accent-color);
             margin: 40px 0 20px;
             font-size: 24px;
-            border-bottom: 2px solid #ff4b6e;
+            border-bottom: 2px solid var(--accent-color);
             padding-bottom: 10px;
         }
 
         .filters {
-            background: white;
+            background: var(--card-bg);
             padding: 20px;
             border-radius: 10px;
             margin-bottom: 30px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 8px var(--shadow-color);
         }
 
         .filter-section {
@@ -51,7 +126,7 @@
         }
 
         .filter-section h3 {
-            color: #333;
+            color: var(--text-primary);
             margin-bottom: 10px;
             font-size: 16px;
         }
@@ -64,21 +139,22 @@
 
         .filter-btn {
             padding: 8px 15px;
-            border: 1px solid #ff4b6e;
+            border: 1px solid var(--accent-color);
             border-radius: 20px;
             background: white;
-            color: #ff4b6e;
+            color: var(--accent-color);
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         .filter-btn.active {
-            background: #ff4b6e;
+            background: var(--accent-color);
             color: white;
         }
 
         .filter-btn:hover {
-            background: #ff4b6e20;
+            background: var(--hover-color);
+            color: white;
             transform: translateY(-2px);
         }
 
@@ -92,13 +168,13 @@
         .price-input {
             width: 120px;
             padding: 8px;
-            border: 1px solid #ddd;
+            border: 1px solid var(--secondary-bg);
             border-radius: 5px;
             transition: border-color 0.3s ease;
         }
 
         .price-input:focus {
-            border-color: #ff4b6e;
+            border-color: var(--accent-color);
             outline: none;
         }
 
@@ -110,17 +186,17 @@
         }
 
         .spot-card, .event-card {
-            background: white;
+            background: var(--card-bg);
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 3px 10px var(--shadow-color);
             transition: all 0.3s ease;
             position: relative;
         }
 
         .spot-card:hover, .event-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 5px 15px var(--shadow-color);
         }
 
         .spot-image, .event-image {
@@ -130,7 +206,7 @@
             transition: transform 0.3s ease;
         }
 
-        .spot-card:hover .spot-image, 
+        .spot-card:hover .spot-image,
         .event-card:hover .event-image {
             transform: scale(1.05);
         }
@@ -141,20 +217,20 @@
 
         .spot-name, .event-name {
             font-size: 20px;
-            color: #333;
+            color: var(--text-primary);
             margin-bottom: 10px;
             font-weight: bold;
         }
 
         .spot-description, .event-description {
-            color: #666;
+            color: var(--text-secondary);
             font-size: 14px;
             margin-bottom: 15px;
             line-height: 1.5;
         }
 
         .price-details {
-            background: #f8f8f8;
+            background: rgba(230, 213, 232, 0.3);
             padding: 15px;
             border-radius: 8px;
             margin-top: 15px;
@@ -168,16 +244,16 @@
         }
 
         .price-label {
-            color: #666;
+            color: var(--text-secondary);
         }
 
         .price-value {
-            color: #ff4b6e;
+            color: var(--accent-color);
             font-weight: bold;
         }
 
         .date-badge {
-            background: #ff4b6e;
+            background: var(--accent-color);
             color: white;
             padding: 6px 12px;
             border-radius: 20px;
@@ -191,7 +267,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background: rgba(255,75,110,0.9);
+            background: var(--accent-color);
             color: white;
             padding: 5px 10px;
             border-radius: 15px;
@@ -206,14 +282,40 @@
         .no-results {
             text-align: center;
             padding: 30px;
-            color: #666;
+            color: var(--text-secondary);
             grid-column: 1 / -1;
-            background: white;
+            background: var(--card-bg);
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 8px var(--shadow-color);
         }
 
         @media (max-width: 768px) {
+            .navbar {
+                width: 100%;
+                border-radius: 0;
+                top: 0;
+                padding: 10px;
+            }
+
+            .navbar ul {
+                flex-wrap: wrap;
+                gap: 5px;
+            }
+
+            .navbar li {
+                flex: 0 0 auto;
+                width: calc(33.33% - 5px);
+            }
+
+            .navbar a {
+                font-size: 0.8em;
+                padding: 8px 10px;
+            }
+
+            body {
+                padding-top: 120px;
+            }
+
             .spots-grid, .events-grid {
                 grid-template-columns: 1fr;
             }
@@ -239,8 +341,20 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../chatbot/chatbot.html">Chatbot</a></li>
+                <li><a href="../music/music.html">Music</a></li>
+                <li><a href="../movies/movie.html">Movies</a></li>
+                <li><a href="../spots/spots.html" class="active">Dating Spots</a></li>
+                <li><a href="../about.html">About & Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <div class="container">
         <div class="filters">
             <div class="filter-section">
                 <h3>Activity Type</h3>
@@ -260,9 +374,10 @@
                     <input type="number" class="price-input" id="min-price" placeholder="Min" min="0">
                     <span>to</span>
                     <input type="number" class="price-input" id="max-price" placeholder="Max" min="0">
-                    <button class="filter-btn" onclick="applyPriceFilter()">Apply</button>
+                    <button class="filter-btn" onclick="applyFilters()">Apply</button>
                 </div>
             </div>
+        </div>
         </div>
         <h2 class="section-title">Popular Dating Spots</h2>
         <div class="spots-grid">
