--- a/music/music.html
+++ b/music/music.html
@@ -407,14 +407,14 @@
                 name: "Ocean Eyes",
                 artist: "Billie Eilish",
                 src: "assets/Billie Eilish - Ocean Eyes (Official Music Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["sad", "love", "relaxed"]
             },
             {
                 name: "Inauma",
                 artist: "Bien",
                 src: "assets/Bien - Inauma (Official Music Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["love", "happy"]
             },
             {
@@ -428,56 +428,56 @@
                 name: "Hold On",
                 artist: "Chord Overstreet",
                 src: "assets/Chord Overstreet - Hold On (Lyric Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["motivational", "sad"]
             },
             {
                 name: "Impossible",
                 artist: "James Arthur",
                 src: "assets/James Arthur - Impossible (Official Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["heartbreak", "sad"]
             },
             {
                 name: "Say You Won't Let Go",
                 artist: "James Arthur",
                 src: "assets/James Arthur - Say You Won't Let Go.mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["love", "happy"]
             },
             {
                 name: "Train Wreck",
                 artist: "James Arthur",
                 src: "assets/James Arthur - Train Wreck (Lyrics).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["heartbreak", "sad"]
             },
             {
                 name: "Colorado",
                 artist: "Milky Chance",
                 src: "assets/Milky Chance - Colorado (Official Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["energetic", "happy"]
             },
             {
                 name: "American Love",
                 artist: "Qing Madi",
                 src: "assets/Qing Madi - American Love (Lyrics).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["love", "happy"]
             },
             {
                 name: "Ole",
                 artist: "Qing Madi, BNXN",
                 src: "assets/Qing Madi, BNXN - Ole (Lyrics).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["energetic", "happy"]
             },
             {
                 name: "Dandelions",
                 artist: "Ruth B.",
                 src: "assets/Ruth B. - Dandelions (Lyrics).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["love", "relaxed"]
             }
         ];
