--- a/music/music.html
+++ b/music/music.html
@@ -421,7 +421,7 @@
                 name: "When the party's over",
                 artist: "Billie Eilish",
                 src: "assets/Billie Eilish - when the party's over (Official Music Video).mp3",
-                cover: "https://placehold.co/145x145",
+                cover: "https://img.freepik.com/premium-photo/music-mind-music-abstract-art-created-with-generative-ai-technology_545448-15311.jpg",
                 mood: ["sad", "heartbreak"]
             },
             {
