--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
-    <title>Day #78 - Google Gemini Clone | AsmrProg</title>
+    <title>HeartLogic</title>
 </head>
 
 <body>
 
     <nav class="navbar">
-        <h3 class="navbar__logo">AsmrProg Gemini</h3>
+        <a href="../index.html"><h3 class="navbar__logo">Home</h3></a>
         <button class="navbar__button" id="themeToggler"><i class='bx bx-sun'></i></button>
     </nav>
 
